[package]
name = "daqmx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4.0"
log = "^0.4"
log4rs = { version = "1.2.0" }
serial_test = "3.0.0"
anyhow = "1.0.40"
thiserror = "1.0"
delegate = "0.12.0"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
derive_builder = "0.20"

[build-dependencies]
bindgen = "0.69"

[features]
default = []
serde_support = ["serde"]
specta_support = ["specta"]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dependencies.specta]
version = "2.0.0-rc"
optional = true
