[package]
name = "daqmx"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10"
lazy_static = "1.4.0"
log = "^0.4"
log4rs = { version = "1.2.0" }
serial_test = "3.0.0"
anyhow = "1.0.40"
thiserror = "2.0"
delegate = "0.13"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
derive_builder = "0.20"

serde  = { version = "1.0", optional = true, features = ["derive"] }
specta = { version = "2.0.0-rc.22", optional = true, features = ["derive"] }

[build-dependencies]
bindgen = "0.72"

[features]
default = []
serde_support = ["dep:serde"]
specta_support = ["dep:specta"]

